# ecobee-exporter

./: .dockerignore  .gitignore  CAPTURE.md  Cargo.toml  Dockerfile  README.md  docker-compose.example.yml  docker-entrypoint.sh  docker-healthcheck.sh  ecobee-exporter.example.toml
.github/workflows/: ci.yml
crates/housekey/: Cargo.toml  LICENSE-APACHE
crates/housekey/housekey/: Cargo.toml
crates/housekey/housekey-app/: Cargo.toml
crates/housekey/housekey-app/src/: main.rs
crates/housekey/housekey/src/: accessory.rs  controller.rs  crypto.rs  discovery.rs  lib.rs  pairing.rs  tlv.rs  transport.rs
crates/housekey/housekey/src/crypto/: keys.rs  session.rs  srp.rs
crates/housekey/housekey/src/pairing/: pair_setup.rs  pair_verify.rs
crates/housekey/housekey/src/transport/: ip.rs
dashboards/: build_dashboard.py  thermostats.json
samples/: README.md
src/: auth0.rs  collector.rs  config.rs  lib.rs  main.rs  metrics.rs  model.rs  provider.rs  server.rs  state.rs  tracing_init.rs
src/beehive/: auth.rs  client.rs  mod.rs  queries.rs
src/homeassistant/: client.rs  mod.rs  translate.rs
src/homekit/: ha_import.rs  mod.rs  translate.rs
tests/: collector_smoke.rs  homeassistant_metrics.rs  homekit_metrics.rs  server_health.rs
tests/fixtures/: ha_core.config_entries.json  ha_states.json  homekit_accessories.json
