[package]
name = "housekey-app"
description = "Desktop app for controlling HomeKit accessories"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
housekey.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

iced = { version = "0.13", features = ["tokio"] }
