[package]
name = "housekey"
description = "Rust HomeKit controller library — pair with and control HomeKit accessories without Apple hardware"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["homekit", "hap", "smart-home", "iot"]
categories = ["network-programming", "hardware-support"]

[dependencies]
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true

# Crypto — pure Rust, no C bindings
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"

# SRP-6a (3072-bit, Apple's parameters) — implemented directly, srp crate is
# incompatible with Apple's variant (padding/proof differences)
num-bigint = { version = "0.4", features = ["rand"] }

# mDNS discovery
mdns-sd = "0.12"

# HTTP (no OpenSSL)
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
